--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Malla Interactiva Obstetricia</h1>
-  <div id="malla" class="grid"></div>
+  <div id="malla" class="malla-grid"></div>
 
   <script src="script.js"></script>
 </body>
